@@ -1,5 +1,5 @@
 // -*- mode:objc -*-
-// $Id: PseudoTerminal.m,v 1.117 2003-02-26 00:54:18 yfabian Exp $
+// $Id: PseudoTerminal.m,v 1.118 2003-02-26 17:30:35 yfabian Exp $
 //
 /*
  **  PseudoTerminal.m
@@ -33,7 +33,7 @@
 #define DEBUG_METHOD_TRACE    0
 #define DEBUG_KEYDOWNDUMP     0
 
-#define USE_CUSTOM_DRAWING	0
+#define USE_CUSTOM_DRAWING	1
 
 #import "PseudoTerminal.h"
 #import "PTYScrollView.h"
@@ -247,6 +247,7 @@ static NSString *ConfigToolbarItem = @"Config";
 
     // initialize the screen
     [[aSession SCREEN] initScreen];
+    [aSession startTimer];
 
     // set the encoding
     [[aSession TERMINAL] setEncoding:encoding];
